Fixing padding for page wrapper on mobile

--- a/app/components/App/index.scss
+++ b/app/components/App/index.scss
@@ -12,7 +12,10 @@
   .page-wrapper {
     font-size: 20px;
     text-align: center;
-    padding: 0 15%;
+
+    @media only screen and (min-width: 801px) {
+      padding: 0 15%;
+    }
   }
 }
 
